BUG#96185. Hide even ticks for time scale when the axis is overflown

--- a/less/tauCharts.less
+++ b/less/tauCharts.less
@@ -62,6 +62,12 @@
         }
     }
 
+    &__d3-time-overflown {
+        .tick:nth-child(even) {
+            display: none;
+        }
+    }
+
     /* Axises and Grid */
     &__svg {
         display: block;
